switch minimum stability to dev

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,5 @@
             "Seta0909\\LaravelTwStreetname\\": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
